fix text alignment / size on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
     /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
     font-family: "Yanone Kaffeesatz", sans-serif;
+    user-select: none;
 }
 
 a {
